--- a/book/ml_principles/basis/algoritmes.ipynb
+++ b/book/ml_principles/basis/algoritmes.ipynb
@@ -5,11 +5,11 @@
             "id": "ee540987",
             "metadata": {},
             "source": [
-                "# Algorithmes\n",
+                "# Algoritmes\n",
                 "[^Goodfellow_et_al]\n",
                 "[^Goodfellow_et_al]: Deze sectie is gebaseerd op [Goodfellow et al. (2016, 96-107)](https://www.deeplearningbook.org/front_matter.pdf).\n",
                 "\n",
-                "Een machine learning algorithme is een algorithme dat kan leren van data. Maar wat verstaan we juist onder \"**leren**\"?  \n",
+                "Een machine learning algoritme is een algoritme dat kan leren van data. Maar wat verstaan we juist onder \"**leren**\"?  \n",
                 "  \n",
                 "_“A computer program is said to learn from experience E with respect to some class of tasks T and performance measure P , if its performance at tasks in T , as measured by P , improves with experience E.”_ [Mitchell (1997)](https://www.cs.cmu.edu/~tom/files/MachineLearningTomMitchell.pdf)  \n",
                 "  \n",
@@ -46,7 +46,7 @@
                 "\n",
                 "[![](https://scikit-learn.org/stable/_images/sphx_glr_plot_anomaly_comparison_001.png)](https://scikit-learn.org/stable/auto_examples/miscellaneous/plot_anomaly_comparison.html)\n",
                 "#### Generatie\n",
-                "Het voorbije decennium hebben we een enorme doorbraak gekend van zogenaamde _generatieve modellen_, zowel in het domein van beeld als van (natuurlijke en programeer-)talen.\n",
+                "Het voorbije decennium hebben we een enorme doorbraak gekend van zogenaamde _generatieve modellen_, zowel in het domein van beeld als van (natuurlijke en programmeer-)talen.\n",
                 "  \n",
                 "[![](https://docs.pytorch.org/tutorials/_images/sphx_glr_dcgan_faces_tutorial_003.png)](https://docs.pytorch.org/tutorials/beginner/dcgan_faces_tutorial.html)\n",
                 "\n",
@@ -188,13 +188,13 @@
             "source": [
                 "#### _Unsupervised learning_\n",
                 "\n",
-                "**Bij _unsupervised learning_ is ervaring gebasseerd op pure blootstelling aan data**. In tegenstelling tot _supervised learning_, is er op voorhand géén informatie beschikbaar over de gewenste model output bij een gegeven input. Het is niet mogelijk om parameterwaarden te optimaliseren aan de hand van scores die het verschil uitdrukken tussen de ouput van het model en de gewenste output (_targets_). Het leeralgortime heeft als doel om (multi-dimensionele) inputs te vertalen naar éénvoudigere structureren. Die structuren blijven _ongelabeled_; de interpretatie (betekenis) van de structuur is geen onderdeel van de model output. Een klassiek voorbeeld zijn _Kohonen's Self-Organizing Maps (SOM)_ een specifieke vorm van _competitief leren_.  \n",
+                "**Bij _unsupervised learning_ is ervaring gebasseerd op pure blootstelling aan data**. In tegenstelling tot _supervised learning_, is er op voorhand géén informatie beschikbaar over de gewenste model output bij een gegeven input. Het is niet mogelijk om parameterwaarden te optimaliseren aan de hand van scores die het verschil uitdrukken tussen de ouput van het model en de gewenste output (_targets_). Het leeralgoritme heeft als doel om (multi-dimensionele) inputs te vertalen naar eenvoudigere structureren. Die structuren blijven _ongelabeld_; de interpretatie (betekenis) van de structuur is geen onderdeel van de model output. Een klassiek voorbeeld zijn _Kohonen's Self-Organizing Maps (SOM)_ een specifieke vorm van _competitief leren_.  \n",
                 "\n",
                 ":::{note} 🌍 2D Kleurkaart\n",
                 ":icon: false\n",
                 ":class: simple\n",
                 "\n",
-                "Hier demonstreren we het principe van __unsupervised learning__ met behulp van een _Kohonen Self-Organizing Map (SOM)_ [](https://doi.org/10.1007%2F978-3-662-00784-6). We zullen zien dat we aan de hand van een _competitief leeralgorithme_ een model kunnen trainen dat een 3D kleurruimte (RGB) vertaalt naar een 2D kleurkaart (waarbij de originele afstand tussen kleuren in 3D zoveel mogelijk behouden blijft). Het gaat dus om dimensionaliteitsreductie als taak. Om de performantie van de oplossing  te scoren zullen we gebruik maken van de _quantization error_. Merk op dat er geen _Loss_ functie gebruikt wordt tijdens het trainen.\n",
+                "Hier demonstreren we het principe van __unsupervised learning__ met behulp van een _Kohonen Self-Organizing Map (SOM)_ [](https://doi.org/10.1007%2F978-3-662-00784-6). We zullen zien dat we aan de hand van een _competitief leeralgoritme_ een model kunnen trainen dat een 3D kleurruimte (RGB) vertaalt naar een 2D kleurkaart (waarbij de originele afstand tussen kleuren in 3D zoveel mogelijk behouden blijft). Het gaat dus om dimensionaliteitsreductie als taak. Om de performantie van de oplossing  te scoren zullen we gebruik maken van de _quantization error_. Merk op dat er geen _Loss_ functie gebruikt wordt tijdens het trainen.\n",
                 "\n",
                 "1. Data Generatie\n",
                 "\n",
@@ -277,7 +277,7 @@
                 "\n",
                 "2. Het Kohonen Netwerk (SOM)\n",
                 "\n",
-                "Een Kohonen-netwerk is een _grid_ van artificiële neuronen. Elk neuron heeft een gewichtsvector met dezelfde dimensie als de invoergegevens. In ons geval is de gewichtsvector van elk knooppunt een array met 3 elementen die een RGB-kleur vertegenwoordigt. De gewichtvectoren van alle neuronen vormen de parameters van het model.\n",
+                "Een Kohonen-netwerk is een _grid_ van artificiële neuronen. Elk neuron heeft een gewichtsvector met dezelfde dimensie als de invoergegevens. In ons geval is de gewichtsvector van elk knooppunt een array met 3 elementen die een RGB-kleur vertegenwoordigt. De gewichtsvectoren van alle neuronen vormen de parameters van het model.\n",
                 "\n",
                 "Een invoervector wordt vergeleken met alle gewichtsvectoren in het 2D-rooster. Het meest gelijkende neuron (de _Best Matching Unit (BMU)_) en zijn buren worden bijgewerkt.\n",
                 "\n",
@@ -303,9 +303,9 @@
                 "Het trainingsproces werkt als volgt:\n",
                 "- Initialisatie: Gewichtsvectoren worden geïnitialiseerd met willekeurige kleuren.\n",
                 "- Competitie: Voor elke invoerkleur uit onze dataset zoekt het netwerk het neuron waarvan de gewichtsvector het meest vergelijkbaar is. Dit \"winnende\" neuron wordt de _Best Matching Unit (BMU)_ genoemd. De gelijkenis wordt doorgaans gemeten met de Euclidische afstand.\n",
-                "- Adaptatie: De gewichtsvector van de BMU wordt bijgewerkt om nog meer op de invoerkleur te lijken. De buren op het _grid_ worden ook bijgewerkt, maar in mindere mate. Dit is het \"zelforganiserende\" deel, omdat het aangrenzende neuronen aanmoedigt om vergelijkbare kleuren te representeren.\n",
+                "- Adaptatie: De gewichtsvector van de BMU wordt bijgewerkt om nog meer op de invoerkleur te lijken. De buren op het _grid_ worden ook bijgewerkt, maar in mindere mate. Dit is het \"zelf-organiserende\" deel, omdat het aangrenzende neuronen aanmoedigt om vergelijkbare kleuren te representeren.\n",
                 "\n",
-                "De performantie van het leeproces wordt afgetoest aan de _quantization error (QE)_ De QE is de gemiddelde afstand tussen elke invoervector en de gewichtsvector van zijn BMU. Het kwantificeert hoe getrouw de _map_ de invoergegevens representeert.\n",
+                "De performantie van het leerproces wordt afgetoetst aan de _quantization error (QE)_ De QE is de gemiddelde afstand tussen elke invoervector en de gewichtsvector van zijn BMU. Het kwantificeert hoe getrouw de _map_ de invoergegevens representeert.\n",
                 "\n",
                 "De formule is:\n",
                 "$$\n",
@@ -467,7 +467,7 @@
             "metadata": {},
             "source": [
                 "#### Reinforcement learning\n",
-                "Bij _reinforcement learning_ is er tijdens het leren een interactie met een omgeving. Er is een _feedback loop_ tussen het model en de ervaring die het kan opdoen. Zoals bij _unsupervised learning_ is er **geen rechstreekse informatie** over iedere model output. Er is echter wel een **onrechstreekse inschatting van de wenselijkheid van een individuele output onder de vorm van een zgn. _reward_ functie**. Deze familie van leeralgorithmes wordt gebruikt in de context van **actie-planning** taken toepassingen waarbij model outputs de vorm hebben van **sequentiële acties** binnen een al dan niet gesimuleerde **omgeving**. Er wordt _geen_ rechstreekse evaluatie gedaan van actie-sequenties ten op zichte van overeenkomstige targets, maar de uitkomst van actie-sequenties wordt wel gescoord ten op zichte van vooraf gedefiniëerde doelstellingen binnen de omgeving. Die scoring gebeurt via de _reward_ functie. In het hoofdstuk over Robotics zullen we dieper ingaan op verschillende vormen van [_reinforcement learning_](https://docs.pytorch.org/tutorials/intermediate/reinforcement_q_learning.html).  \n",
+                "Bij _reinforcement learning_ is er tijdens het leren een interactie met een omgeving. Er is een _feedback loop_ tussen het model en de ervaring die het kan opdoen. Zoals bij _unsupervised learning_ is er **geen rechtstreekse informatie** over iedere model output. Er is echter wel een **onrechtstreekse inschatting van de wenselijkheid van een individuele output onder de vorm van een zgn. _reward_ functie**. Deze familie van leeralgoritmes wordt gebruikt in de context van **actie-planning** taken toepassingen waarbij model outputs de vorm hebben van **sequentiële acties** binnen een al dan niet gesimuleerde **omgeving**. Er wordt _geen_ rechtstreekse evaluatie gedaan van actie-sequenties ten op zichtte van overeenkomstige targets, maar de uitkomst van actie-sequenties wordt wel gescoord ten op zichtte van vooraf gedefinieerde doelstellingen binnen de omgeving. Die scoring gebeurt via de _reward_ functie. In het hoofdstuk over Robotics zullen we dieper ingaan op verschillende vormen van [_reinforcement learning_](https://docs.pytorch.org/tutorials/intermediate/reinforcement_q_learning.html).  \n",
                 "  \n",
                 "[![](https://huggingface.co/datasets/huggingface-deep-rl-course/course-images/resolve/main/en/unit1/RL_process_game.jpg)](https://huggingface.co/learn/deep-rl-course/en/unit1/rl-framework)\n",
                 "\n",
