--- a/book/ml_principles/basis/modellen.ipynb
+++ b/book/ml_principles/basis/modellen.ipynb
@@ -27,7 +27,7 @@
                 ":::\n",
                 "\n",
                 "**Een model is de formele wiskundige beschrijving van de manier waarop data en data-variaties in een specifiek geval tot stand komen.**  \n",
-                "De keuze van ons model hangt rechstreeks samen met de keuze van het leeralgoritme.\n",
+                "De keuze van ons model hangt rechtstreeks samen met de keuze van het leeralgoritme.\n",
                 "\n",
                 ":::{note} 🌍\n",
                 ":icon: false\n",
