--- a/book/ml_principles/structured/intro.ipynb
+++ b/book/ml_principles/structured/intro.ipynb
@@ -26,39 +26,57 @@
                 "Desalniettemin is het belangrijk voor de bruikbaarheid van de ML oplossing om _zuinig te zijn met het aantal features_. _Iedere feature die om een model parameter wordt gemapped, moet immers ook in productie telkens (betrouwbaar ⚠️) aanwezig zijn_. **Feature selectie verwijst algemeen naar het proces waarbij op zoek gegaan wordt naar dé bepalende features voor betrouwbare patroonherkenning in een bepaalde context**.\n",
                 "\n",
                 "## Feature engineering\n",
+                "\n",
                 "### Meetschaal\n",
                 "Naast de hoeveelheid features is hun **heterogeniteit qua meetschaal** ook vaak een significante uitdaging:\n",
                 "- **Nominaal**: De informatie laat toe om items in bepaalde categorieën te plaatsen (bv. \"fruit\" $\\neq$ \"groente\" $\\neq$ \"vlees\" $\\neq$ \"rond\" $\\neq$ \"vierkant\" $\\neq$ $\\ldots$)\n",
                 "- **Ordinaal**: De informatie laat toe om items te ordenen (bv. \"small\" $<$ \"medium\" $<$ \"large\")\n",
                 "- **Interval**: De informatie laat toe om de afstand tussen items te bepalen (bv. $45\\degree - 10\\degree = 5\\degree - (-30\\degree)$)\n",
                 "- **Ratio**: De informatie laat toe om de verhoudingen tussen items te bepalen (bv. $\\frac{120km/h}{60km/h} = \\frac{30km/h}{15km/h}$)\n",
-                "### (On)volledigheid\n",
-                "De data zijn in veel gevallen onvolledig (met verschillende gradaties per feature) en er moet dus nagedacht worden over hoe om te gaan met **_missing data_**.\n",
-                "### (On)gebalanceerdheid\n",
-                "**Ongebalanceerdheid** van data verwijst naar het fenomeen waarbij **bepaalde categorieën (bv. man/vrouw) of continue waarden (bv. leeftijden) over- of ondervertegenwoordigd zijn in de data**. Als de training data ongebalanceerd is met betrekking tot bepaalde features, geven ze geen realistisch beeld van de verdeling van de data in de echte wereld en kan het zijn dat het model verkeerde parameterwaarden leert. Wanneer we het model dan in productie zetten, kan het zijn dat we heel slechte prestaties zien, terwijl de prestaties met de **training, validatie en test data** zeer goed waren.\n",
+                "\n",
+                "### (On)gebalanceerdheid en _bias_\n",
+                "**Ongebalanceerdheid** van data verwijst naar het fenomeen waarbij **bepaalde categorieën (bv. man/vrouw) of continue waarden (bv. leeftijden) over- of ondervertegenwoordigd zijn in de data**. Dit kan louter het gevolg zijn van natuurlijke _scheefheid_ in de verdeling van de data ofwel een gevolg van de specifieke manier van dataverzameling. Bij (semi-)gestructureerde data is dit altijd een aandachtspunt omdat we meestal te maken krijgen met dataset die op natuurlijke wijze verkregen zijn (bv. verkooptransacties, server logs, enz.). Naargelang de ernst van ongebalanceerdheid leidt het tot **_statistische bias_**. Dit verwijst naar het fenomeen waarbij **modellen systematische predictiefouten maken en dus bepaalde _voorkeuren_ ontwikkelen**.  \n",
+                "  \n",
+                "In extreme gevallen kan een model totaal onbruikbaar worden door ongebalanceerdheid. Stel dat we een dataset krijgen om frauduleuze transacties te voorspellen op basis van een aantal features (bv. IP locatie, volume, enz.). Aangezien we hier met zeldzame events te maken hebben, is de dataset zeer ongebalanceerd met betrekking tot de target klasse (zgn. _class imbalance_) - bijvoorbeeld: 3% frauduleuze transacties versus 97% niet-frauduleuze transacties. Dit impliceert dat een model dat altijd (100%) \"niet-frauduleus\" voorspelt, een accuraatheid van 97% behaalt - een percentage waar we in andere situaties enkel van kunnen dromen.\n",
+                "  \n",
+                "Ongebalanceerdheid weerspiegelt soms ook sociale ongelijkheden waardoor het risico ontstaat dat we een model creëren dat die ongelijkheden overneemt of zelfs uitvergroot (door bv. systematisch meerderheden te bevooroordelen).\n",
+                "\n",
+                "Om ons in te dekken tegen ongebalanceerdheid is exploratieve data analyse een belangrijke tool. Het kan geremedieerd worden door extra data te verzamelen en/of door _over-/ondersampling_ toe te passen op de trainingsdata.\n",
+                "- Bij **ondersampling gaan we een random selectie (_subsample_) maken van overgerepresenteerde categorieën of waarden** zodat er een betere balans ontstaat met de ondergerepresenteerde data. Modellen worden dan soms meerdere keren getraind, telkens met een andere _subsample_ om zeker te zijn dat de ondersampling zelf geen artefacten teweeg brengt.\n",
+                "- Bij **oversampling** worden nieuwe, meer gebalanceerde datasets gemaakt door **random samples uit de ondergerepresenteerde categorieën of waarden _toe te voegen_**. Dit houdt data duplicatie in, maar is in bepaalde gevallen een zeer effectieve strategie tegen _bias_.\n",
+                "\n",
                 "#### Terminologieën\n",
                 "- Wanneer de training data geen realistisch beeld geven van de werkelijke verdeling (of _distributie_) van feature-waarden in de werkelijkheid, zeggen we dat ze **\"onrepresentatief\"** zijn.\n",
                 "- **Training**, **validatie** en **test data** verwijst naar de standaard praktijk in ML om de training data in drie delen op te splitsen:\n",
-                "    - **Training data**: dit is de bulk van de data waarmee we ons leeralgorithme effectief voeden (bv. 70%).\n",
+                "    - **Training data**: dit is de bulk van de data waarmee we ons leeralgoritme effectief voeden (bv. 70%).\n",
                 "    - **Validatie data**: dit is een kleiner stuk van de data waarmee we _tijdens de training en hyper parameter tuning_ nagaan hoe het leren verbeterd (bv. 20%).\n",
                 "    - **Test data**: dit is een (meestal nog) kleiner stuk van de data dat volledig opzij gehouden wordt (bv. 10%). Het model kan deze data dus op geen enkel moment tijdens de training \"zien\". Ze dienen om de **generalisatie** capaciteit van het model te kwantificeren.\n",
                 "- **Generalisatie**: Deze term verwijst naar de capaciteit van het model om patronen te herkennen op nieuwe data.\n",
+                "\n",
+                "### (On)volledigheid\n",
+                "De data zijn in veel gevallen onvolledig (met verschillende gradaties per feature) en er moet dus nagedacht worden over hoe om te gaan met **_missing data_**:\n",
+                "- Niet: Sommige modellen kunnen perfect om met voorbeelden (denk: rijen) waar één of meerdere feature-waarden ontbreken\n",
+                "- Verwijderen: Als er genoeg andere voorbeelden zijn kan het baten om onvolledige rijen in de feature matrix simpelweg te verwijderen\n",
+                "- **_Imputation_**: **Hierbij gaan we ontbrekende feature waarden volgens een bepaalde strategie invullen.**\n",
+                "#### Missing value imputation\n",
+                "Wanneer _missingness_ systematisch optreedt, draagt het bij tot ongebalanceerdheid van de trainingsdata en neemt dus het risico op _bias_ in de model outputs toe. Er bestaan verschillende strategieën om ontbrekende waarden in te vullen (random, interpolatie, gemiddeldes, enz.). Er bestaan zelfs model-gebaseerde strategieën.  \n",
+                "[![](https://img.shields.io/badge/Wikipedia-000?logo=wikipedia&logoColor=fff&style=flat)](https://en.wikipedia.org/wiki/Missing_data)\n",
                 "\n",
                 "## Model selectie\n",
                 "ML wordt in het algemeen bemoeilijkt bij complexe patronen en in het geval van gestructureerde data is het in die context vaak zo dat de patronen waar we naar op zoek zijn niet in simpele lineaire relaties uit te drukken zijn. Pure lineaire modellen schieten dan ook heel vaak te kort. Soms kan die opgevangen worden aan de hand niet-lineaire feature transformaties (bv. log- en cyclische transformaties), maar ook die technieken schieten vaak te kort. Het vinden van de juiste benadering qua modelleren is daardoor in veel gevallen ook niet triviaal.\n",
                 "\n",
                 "## _Explainability_\n",
-                "Bij gestructureerde data is het vaak zo dat ML problemen zich in een context situreren waar het belangrijk is om **de uiteindelijk geleerde partronen in parameters te kunnen uitleggen**. Dit is absoluut het geval in de context van _Business Intelligence (BI)_ toepassingen.\n",
+                "Bij gestructureerde data is het vaak zo dat ML problemen zich in een context situeren waar het belangrijk is om **de uiteindelijk geleerde patronen in parameters te kunnen uitleggen**. Dit is absoluut het geval in de context van _Business Intelligence (BI)_ toepassingen.\n",
                 "\n",
                 "## Data volumes\n",
                 "### Big data\n",
                 "Naast grote keuze uit potentiële features, beschikken bedrijven en organisaties tegenwoordig vaak over hele grote hoeveelheden historische metingen van variabelen. Ook daar kan het belangrijk zijn om een selectie te doen (bv. omdat het geen nut heeft om naar _te oude_ data te kijken). Er is ook een technische uitdaging om met **hele grote volumes data** om te gaan. Sommige modelleertechnieken lenen zich daar beter toe dan andere omdat de berekeningen gedistribueerd kunnen uitgevoerd worden op een cluster van servers (zie bv. [SparkMLlib](https://spark.apache.org/docs/latest/ml-guide.html)).\n",
                 "### ⚠️ _Overfitting_\n",
-                "De verhouding tussen het aantal trainingdata en het aantal model parameters is misschien wel een van de belangrijkste uitdagingen voor ML in het algemeen. Bij gestructureerde data, zeker wanneer ze niet per se _big_ zijn, is het echter altijd een aandachtspunt. Bij de bespreking van features zagen we reeds dat iedere parameter van een model gelinkt is aan één of meerdere zogenaamde input features. Naarmate we meer potentiële features hebben, kunnen we ook meer parameters toevoegen om zo complexere patronen te leren herkennen. Als we echter evenveel (of meer) parameters toevoegen dan er voorbeelden zijn (denk: rijen in de training data), zal een leerlargorithme in staat zijn om de individuele data perfect te mappen op de model parameters. Het algorithme heeft in dat geval geen patroon geleerd, maar wel de data in zijn geheel.  \n",
+                "De verhouding tussen het aantal trainingsdata en het aantal model parameters is misschien wel een van de belangrijkste uitdagingen voor ML in het algemeen. Bij gestructureerde data, zeker wanneer ze niet per se _big_ zijn, is het echter altijd een aandachtspunt. Bij de bespreking van features zagen we reeds dat iedere parameter van een model gelinkt is aan één of meerdere zogenaamde input features. Naarmate we meer potentiële features hebben, kunnen we ook meer parameters toevoegen om zo complexere patronen te leren herkennen. Als we echter evenveel (of meer) parameters toevoegen dan er voorbeelden zijn (denk: rijen in de training data), zal een leeralgoritme in staat zijn om de individuele data perfect te mappen op de model parameters. Het algoritme heeft in dat geval geen patroon geleerd, maar wel de data in zijn geheel.  \n",
                 "  \n",
                 "De illustratie hieronder geeft weer wat er gebeurt wanneer we bij een lineair regressie probleem met een _bias_ en _slope_ parameter, slechts twee datapunten zouden gebruiken om de parameters te schatten. In dat geval leert het model perfect de training data te voorspellen, maar het is duidelijk dat het geleerde patroon helemaal niet overeenkomt met het werkelijke.\n",
                 "\n",
-                "**Overfitting** verwijst naar het fenomeen waarbij het model verhoudingsgewijs te veel parameters heeft tegenover de hoeveelheid voorbeelden in de training data waaruit het leeralgoritme de optimale parameterwaarden schat. Hierdoor krijgen we **een getrained model dat te veel eigen wordt aan de specifieke training data en te weinig generaliseert naar ongeziene data**."
+                "**Overfitting** verwijst naar het fenomeen waarbij het model verhoudingsgewijs te veel parameters heeft tegenover de hoeveelheid voorbeelden in de training data waaruit het leeralgoritme de optimale parameterwaarden schat. Hierdoor krijgen we **een getraind model dat te veel eigen wordt aan de specifieke training data en te weinig generaliseert naar ongeziene data**."
             ]
         },
         {
