--- a/book/algemeen/voorbereiding.ipynb
+++ b/book/algemeen/voorbereiding.ipynb
@@ -17,12 +17,12 @@
                 "2. [Installeer Git op je PC](https://git-scm.com/book/en/v2/Getting-Started-Installing-Git) (Linux/WSL of MacOS).\n",
                 "3. Ga naar [https://github.com/ap-mdi-it/ml-courses](https://github.com/ap-mdi-it/ml-courses) en creëer een [_fork_](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/working-with-forks/fork-a-repo) onder je eigen account.\n",
                 "4. Download de repository via het `git clone https://github.com/YOUR-USERNAME/ml-courses.git` commando ([doc](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)).\n",
-                "5. Open een terminal, `cd` naar de geclonede repository en run: `git remote add upstream https://github.com/ap-mdi-it/ml-courses.git`\n",
+                "5. Open een terminal, `cd` naar de gekloonde repository en run: `git remote add upstream https://github.com/ap-mdi-it/ml-courses.git`\n",
                 "6. Installeer [Visual Studio Code](https://code.visualstudio.com/) (Linux/WSL of MacOS).\n",
                 "7. [Installeer Docker (Desktop) op je PC](https://docs.docker.com/desktop/)\n",
                 "8. In VSCode, installeer je volgende extensie: [Dev Containers](https://marketplace.visualstudio.com/items?itemName=ms-vscode-remote.remote-containers)\n",
                 "\n",
-                "In VSCode navigeer je naar de folder van de geclonede repository. Normaal gezien verschijnt er een pop-up met de mogelijkheid \"Reopen in Container\"  \n",
+                "In VSCode navigeer je naar de folder van de gekloonde repository. Normaal gezien verschijnt er een pop-up met de mogelijkheid \"Reopen in Container\"  \n",
                 "  \n",
                 "![](../../img/vscode_devcontainer1.png)  \n",
                 "  \n",
