--- a/book/ml_principles/basis/inference.ipynb
+++ b/book/ml_principles/basis/inference.ipynb
@@ -7,7 +7,7 @@
             "source": [
                 "# _Inference_\n",
                 "\n",
-                "Eens een model succesvol getraind is, kan het ingezet worden om **nieuwe inputs te verwerken**. Op dat moment spreken we van **_model inference_** in plaats van training. De enige voorwaarde is dat nieuwe inputs in exact hetzelfde formaat van numerieke features als bij de trainingfase aangeboden worden."
+                "Eens een model succesvol getraind is, kan het ingezet worden om **nieuwe inputs te verwerken**. Op dat moment spreken we van **_model inference_** in plaats van training. De enige voorwaarde is dat nieuwe inputs in exact hetzelfde formaat van numerieke features als bij de trainingsfase aangeboden worden."
             ]
         }
     ],
