--- a/book/ml_principles/basis/lifecycle.ipynb
+++ b/book/ml_principles/basis/lifecycle.ipynb
@@ -25,7 +25,7 @@
                 "Deze stap vergt soms reeds een significante inspanning, maar het heeft geen zin om aan een machine learning pad te beginnen zonder een **duidelijke aflijning van de vraag die we willen beantwoorden**.   \n",
                 "\n",
                 "## 2. Data verzameling  \n",
-                "Is er **geschikte data in voldoende hoeveelheden** aanwezig (ook voor latere monitoring)? Kunnen we gebruikmaken van _supervised learning_ (zijn er duidelijke leertargetdata)?\n",
+                "Is er **geschikte data in voldoende hoeveelheden** aanwezig (ook voor latere monitoring)? Kunnen we gebruikmaken van _supervised learning_ (zijn er duidelijke leer-targetdata)?\n",
                 "\n",
                 "## 3. Data voorbereiding\n",
                 "Moet er **missing data** behandeld worden? Zijn er **meetfouten**? Moet er **annotatie** gebeuren?\n",
