--- a/book/ml_principles/basis/training.ipynb
+++ b/book/ml_principles/basis/training.ipynb
@@ -11,7 +11,7 @@
                 "1. Model training\n",
                 "2. Model inference\n",
                 "\n",
-                "Op het moment dat we een model hebben gedefiniëerd, willen we de parameters aan de hand van de beschikbare data schatten. Dat doen we door het gepaste leeralgoritme toe te passen.\n",
+                "Op het moment dat we een model hebben gedefinieerd, willen we de parameters aan de hand van de beschikbare data schatten. Dat doen we door het gepaste leeralgoritme toe te passen.\n",
                 "Dit noemen we **model training**.  \n",
                 "  \n",
                 "Een **getraind model is een model waarvan de parameters geschat zijn met behulp van een wel bepaalde training dataset en optimalisatie-algoritme**.\n",
@@ -138,8 +138,8 @@
                 ":::{note} 🌍\n",
                 ":icon: false\n",
                 ":class: simple\n",
-                "In dit algorithme spreken we dus over 2 **hyper parameters**: $\\hat{b_0}$ en $\\alpha$. De keuze daarvan heeft duidelijk drastische gevolgen voor de convergentie van het leerprocess.\n",
-                "Als we op een bepaald moment de schatting van de model parameter $\\hat{b}$ willen vastzetten (zgn. _parameter freezing_), kunnen het algorithme ook uitbreiden met een zgn. _stopping rule_.\n",
+                "In dit algoritme spreken we dus over 2 **hyper parameters**: $\\hat{b_0}$ en $\\alpha$. De keuze daarvan heeft duidelijk drastische gevolgen voor de convergentie van het leerproces.\n",
+                "Als we op een bepaald moment de schatting van de model parameter $\\hat{b}$ willen vastzetten (zgn. _parameter freezing_), kunnen het algoritme ook uitbreiden met een zgn. _stopping rule_.\n",
                 "Die regel bepaald de voorwaarde om de updates te stoppen. Dat kan heel simpel door toevoeging van een hyper parameter die het maximum aantal updates bepaalt of door bijvoorbeeld een limiet te zetten op de _online_ update variantie (bv. [](https://doi.org/10.2307%2F1266577))\n",
                 ":::\n",
                 "\n",
@@ -147,15 +147,15 @@
                 "De _Loss_ functie is ook gekend onder de namen _Error_ functie en _Cost_ functie. Er wordt in de domeinen van de wiskundige optimalisatie en beslissingstheorie ook soms gesproken over een _objectieve functie_.\n",
                 "Die verwijst ofwel naar een verliesfunctie of zijn tegengestelde vorm. Dan wordt er bijvoorbeeld ook gesproken over een _reward_ functie, _profit_ functie, _utility_ functie, _fitness_ functie, enz.\n",
                 "  \n",
-                "Bij het zoeken naar de optimale waarden voor de parameters in ons model _en/of_ om te evalueren of het leeralgorithme effectief tot _leren_ leidt, moeten we wiskundig kunnen uitdrukken wat _optimaliteit_ in een specifiek geval betekent om de _goodness of fit_ van de oplossing te kunnen uitdrukken - met andere woorden, we moeten de _optimaliteit_ van parameterschattingen op ieder momenent in een cijfer kunnen uitdrukken (kwantificeren). We moeten dus een functie beschrijven die optimaliteit uitdrukt. Het doel van het optimalisatie algorithme is om de output van die functie te maximaliseren.  \n",
+                "Bij het zoeken naar de optimale waarden voor de parameters in ons model _en/of_ om te evalueren of het leeralgoritme effectief tot _leren_ leidt, moeten we wiskundig kunnen uitdrukken wat _optimaliteit_ in een specifiek geval betekent om de _goodness of fit_ van de oplossing te kunnen uitdrukken - met andere woorden, we moeten de _optimaliteit_ van parameterschattingen op ieder moment in een cijfer kunnen uitdrukken (kwantificeren). We moeten dus een functie beschrijven die optimaliteit uitdrukt. Het doel van het optimalisatie algoritme is om de output van die functie te maximaliseren.  \n",
                 "❗Om wiskundige redenen (die in de Mathematical Foundations cursus aan bod komen), draaien we de logica echter om en beschrijven we een functie die de _sub-optimaliteit_ uitdrukt. Die functie trachtten we dan te _minimaliseren_.  \n",
                 "  \n",
-                "**De _Loss_ functie is de wiskundige functie die de _sub-optimaliteit_ uitdrukt van parameterschattingen in een bepaalde context. Het doel van het optimalisatie-algorithme is om de output van die functie te _minimaliseren_.** Zoals we nog zullen illustreren, betekent dit niet per se dat het leeralgorithme rechtstreeks gebruik maakt van de _Loss_ functie.\n",
+                "**De _Loss_ functie is de wiskundige functie die de _sub-optimaliteit_ uitdrukt van parameterschattingen in een bepaalde context. Het doel van het optimalisatie-algoritme is om de output van die functie te _minimaliseren_.** Zoals we nog zullen illustreren, betekent dit niet per se dat het leeralgoritme rechtstreeks gebruik maakt van de _Loss_ functie.\n",
                 "\n",
                 ":::{note} 🌍\n",
                 ":icon: false\n",
                 ":class: simple\n",
-                "We nemen terug het geval van ons eenvoudige \"airco model\", waarbij we niet kiezen voor een online benadering van hier net boven, maar voor een **_batch_ optimalisatie-algorithme** (**de optimalisatie gebeurt door _tegelijk_ naar _alle_ observaties in de training data te kijken**). Een simpele definitie van optimaliteit hierbij is om op zoek te gaan naar de waarde die de kleinste afwijking heeft ten opzichte van alle observaties. Om in deze context _sub-optimaliteit_ uit te drukken als de output van een _Loss_ functie, wordt hier gekozen[^mathf] voor de zogenaamde **Sum of Squared Errors (SSE)** functie met als algemene vorm:\n",
+                "We nemen terug het geval van ons eenvoudige \"airco model\", waarbij we niet kiezen voor een online benadering van hier net boven, maar voor een **_batch_ optimalisatie-algoritme** (**de optimalisatie gebeurt door _tegelijk_ naar _alle_ observaties in de training data te kijken**). Een simpele definitie van optimaliteit hierbij is om op zoek te gaan naar de waarde die de kleinste afwijking heeft ten opzichte van alle observaties. Om in deze context _sub-optimaliteit_ uit te drukken als de output van een _Loss_ functie, wordt hier gekozen[^mathf] voor de zogenaamde **Sum of Squared Errors (SSE)** functie met als algemene vorm:\n",
                 "$$\n",
                 "J_{SSE}(f(\\pmb{x}); \\pmb{y}) = \\sum_{i=1}^M(y_i-f(x_i))^2\n",
                 "$$\n",
