--- a/book/ml_principles/basis/structuur.ipynb
+++ b/book/ml_principles/basis/structuur.ipynb
@@ -11,14 +11,14 @@
                 "1. **gestructureerde data**,\n",
                 "2. **semi-gestructureerde data** en\n",
                 "3. **ongestructureerde data**.\n",
-                "De verschillen tussen deze datatypes zijn cruciaal voor de keuze tussen ML modellen en leeralgorithmes.\n",
+                "De verschillen tussen deze datatypes zijn cruciaal voor de keuze tussen ML modellen en leeralgoritmes.\n",
                 "\n",
                 "## Gestructureerde data\n",
                 "\n",
                 "**Gestructureerde data is data die een gestandaardiseerd formaat heeft dat wordt gedefinieerd door een schema**. Deze data wordt doorgaans opgeslagen in een tabelformaat met rijen en kolommen, wat het gemakkelijk maakt om te doorzoeken en te analyseren.\n",
                 "\n",
                 "### Kenmerken\n",
-                "- **Voorafbepaald formaat**: Volgt een vast patroon en structuur\n",
+                "- **Vooraf bepaald formaat**: Volgt een vast patroon en structuur\n",
                 "- **Tabelformaat**: Opgeslagen in rijen en kolommen; ieder datapunt heeft een specifiek veld (`Naam`, `Datum`, `Adres`, enz.)\n",
                 "- **Gemakkelijke navigatie**: Kan eenvoudig worden opgevraagd met standaard _data-wrangling tools_ (_SQL_, _Pandas_, enz.)\n",
                 "\n",
@@ -569,7 +569,7 @@
                 "## Datastructuur en ML modelkeuzes\n",
                 "\n",
                 "Het onderzoek en de ontwikkeling van ML technieken is sterk beïnvloed door de gangbare datastructuur in bepaalde domeinen.\n",
-                "Zo is _deep learning_ voornamlijk tot stand gekomen binnen beeldverwerking (ongestructureerde data). De alomtegenwoordige _transformer_ architectuur is afkomstig uit _Natural Language Processing_ (_NLP_; ongestructureerde data). _Graph Neural Networks_ zijn vooral ontwikkeld binnen _semi-structured_ social-media netwerk toepassingen. Moderne tree-based methodes zijn dan weer alom tegenwoordig bij gestructureerde data. Hieronder geven we een illustratief overzicht van courante technieken. \n",
+                "Zo is _deep learning_ voornamelijk tot stand gekomen binnen beeldverwerking (ongestructureerde data). De alomtegenwoordige _transformer_ architectuur is afkomstig uit _Natural Language Processing_ (_NLP_; ongestructureerde data). _Graph Neural Networks_ zijn vooral ontwikkeld binnen _semi-structured_ social-media netwerk toepassingen. Moderne tree-based methodes zijn dan weer alom tegenwoordig bij gestructureerde data. Hieronder geven we een illustratief overzicht van courante technieken. \n",
                 "\n",
                 "### Gestructureerde Data\n",
                 "- Linear/Polynomial Regression\n",
