--- a/book/ml_principles/basis/lifecycle.ipynb
+++ b/book/ml_principles/basis/lifecycle.ipynb
@@ -5,9 +5,9 @@
             "id": "06e9c32c",
             "metadata": {},
             "source": [
-                "# Machine Learning Proces\n",
+                "# Machine Learning _Flow_\n",
                 "\n",
-                "Het ontwikkelen van een machine learning model volgt de volgende stappen: \n",
+                "Het ontwikkelen van een machine learning model bestaat uit de volgende onderdelen: \n",
                 "1. **Probleem definitie**\n",
                 "2. **Data verzameling**\n",
                 "3. **Data voorbereiding**\n",
@@ -17,7 +17,7 @@
                 "7. **Model training**\n",
                 "8. **Model _refinement_**\n",
                 "\n",
-                "Zoals geïllustreerd in de onderstaande figuur, vormen deze stappen **quasi _nooit_ een strikt lineair proces**.\n",
+                "Zoals geïllustreerd in de onderstaande figuur, vormen deze stappen **quasi _nooit_ een strikt sequentieel proces**.\n",
                 "\n",
                 "![](../../../img/MLProcess.jpg)\n",
                 "\n",
@@ -48,7 +48,13 @@
                 "  \n",
                 "\n",
                 "Na _refinement_ kan beslist worden om het model te operationaliseren in een productieomgeving. Daarvoor zijn meestal nog aanzienlijke ontwikkeling inspanningen nodig (API development & _DevOps_).\n",
-                "Eens het model effectief in productie gebruikt wordt, is ook nood aan een vorm van _model monitoring_ met gepaste metrieken om bijvoorbeeld een model hertraining te realiseren. Dit is het domein van _MLOps_."
+                "Eens het model effectief in productie gebruikt wordt, is ook nood aan een vorm van _model monitoring_ met gepaste metrieken om bijvoorbeeld een model hertraining te realiseren. Dit is het domein van _MLOps_.\n",
+                "\n",
+                "## _AutoML_\n",
+                "_AutoML_ toepassingen proberen om de ML _flow_ geheel of gedeeltelijk te automatiseren. Voorbeelden zijn:\n",
+                "- Neural Architecture Search ([NAS](https://docs.pytorch.org/tutorials/intermediate/ax_multiobjective_nas_tutorial.html))\n",
+                "- [TPOT](https://epistasislab.github.io/tpot/latest/)\n",
+                "- [Ludwig (Uber)](https://ludwig.ai/latest/user_guide/automl/)"
             ]
         }
     ],
