--- a/book/ml_principles/basis/algoritmes.ipynb
+++ b/book/ml_principles/basis/algoritmes.ipynb
@@ -476,7 +476,17 @@
                 "  \n",
                 "De _loss_ functie geeft niet noodzakelijk rechtstreeks een zicht op taak-prestaties. We zullen zien dat er verschillende _metrics_ gangbaar zijn, afhankelijk van de taak-context (bv. klassificatie, regressie, enz.) en het specifieke domein (bv. computervisie, NLP, enz.). Het gaat onder andere over klassificatie _accuracy_, _F_-scores, _Intersection over Union_ (IoU), _Mean Average Error_ (_MAE_), enz. (zie [_scikit-learn metrics_ module](https://scikit-learn.org/stable/api/sklearn.metrics.html#module-sklearn.metrics) en [_scikit-learn scoring guide_](https://scikit-learn.org/stable/modules/model_evaluation.html#metrics-and-scoring-quantifying-the-quality-of-predictions)).  \n",
                 "  \n",
-                "**Het toepassen van _metrics_ om prestaties in kaart te brengen, heet algemeen: _model scoring_**."
+                "**Het toepassen van _metrics_ om prestaties in kaart te brengen, heet algemeen: _model scoring_**.\n",
+                "\n",
+                "#### Training, validatie en testing\n",
+                "Om zeker te zijn dat een model patronen leert te herkennen en niet gewoon de trainingsdata van buiten leert, is het cruciaal om de prestaties te evalueren op ongeziene data. **De capaciteit om juiste voorspellingen te maken met _nieuwe data_ wordt algemeen de _generalisatie_ capaciteit van het model genoemd**. Er wordt in die context standaard een onderscheid gemaakt tussen drie groepen data:  \n",
+                "1. **Trainingsdata**: dit is de bulk van de data (bv. 70%) waarmee we ons leeralgoritme effectief laten werken om de optimale modelparameters te vinden.\n",
+                "2. **Validatiedata**: dit is een kleiner stuk van de data (bv.20%) waarmee we _tijdens de training en hyper parameter tuning_ evalueren hoe het model presteert op ongeziene data.\n",
+                "3. **Testdata**: dit is een (meestal nog) kleiner stuk van de data (bv. 10%) dat volledig opzij gehouden wordt. Het model kan nooit (rechtstreeks of onrechtstreeks) beïnvloed worden door deze data tijdens de training. Ze dienen om de **generalisatie** capaciteit van het model finaal te kwantificeren.  \n",
+                "  \n",
+                "Vaak wordt met een meer geavanceerde vorm van validatie gewerkt: zogenaamde **_K-Fold Cross_-validatie**. In plaats van één stuk data opzij te houden als validatie data, wordt de trainingsdata in _K_ gelijke delen op gesplitst. Het model wordt dan bij iedere tussenstap _K_ keer getraind met _K-1_ delen en gevalideerd met het overige deel.  \n",
+                "  \n",
+                "[![](https://scikit-learn.org/stable/_images/grid_search_cross_validation.png?raw=true)](https://scikit-learn.org/stable/modules/cross_validation.html)"
             ]
         }
     ],
